Add auto-restart script to mac os x version